WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154128
ClonedArguments should not materialize its special properties unless they are being changed or deleted
https://bugs.webkit.org/show_bug.cgi?id=154128
Summary
ClonedArguments should not materialize its special properties unless they are...
Keith Miller
Reported
2016-02-11 13:46:42 PST
ClonedArguments should not materialize its special properties unless they are being changed or deleted
Attachments
Patch
(5.96 KB, patch)
2016-02-11 13:56 PST
,
Keith Miller
no flags
Details
Formatted Diff
Diff
Benchmark results
(65.12 KB, text/plain)
2016-02-11 14:11 PST
,
Keith Miller
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2016-02-11 13:56:11 PST
Created
attachment 271082
[details]
Patch
Keith Miller
Comment 2
2016-02-11 14:11:12 PST
Created
attachment 271085
[details]
Benchmark results
WebKit Commit Bot
Comment 3
2016-02-16 11:28:07 PST
Comment on
attachment 271082
[details]
Patch Clearing flags on attachment: 271082 Committed
r196644
: <
http://trac.webkit.org/changeset/196644
>
WebKit Commit Bot
Comment 4
2016-02-16 11:28:11 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug